bdr.BDR.scala.error
Compilation error:
BDR:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var letter : String
    ^BDR:2: error: local variables must be initialized
var letter : String
    ^BDR:4: error: not found: value char
  if (char getIndication()==R){
      ^BDR:4: error: not found: value R
  if (char getIndication()==R){
                            ^BDR:7: error: not found: value char
  else if (char getIndication()==L){
           ^BDR:7: error: not found: value L
  else if (char getIndication()==L){
                                 ^BDR:10: error: not found: value char
  else if (char getIndication()==I){
           ^BDR:10: error: not found: value I
  else if (char getIndication()==I){
                                 ^BDR:14: error: not found: value char
  else if (char getIndication()==A){
           ^BDR:14: error: not found: value A
  else if (char getIndication()==A){
                                 ^BDR:16: error: not found: value char
  else if (char getIndication()==B){
           ^BDR:16: error: not found: value B
  else if (char getIndication()==B){
                                 ^BDR:18: error: not found: value char
  else if (char getIndication()==C){
           ^BDR:18: error: not found: value C
  else if (char getIndication()==C){
                                 ^BDR:20: error: not found: value char
  else if (char getIndication()==Z){
           ^BDR:20: error: not found: value Z
  else if (char getIndication()==Z){
                                 ^BDR:22: error: not found: value char
  else if (char getIndication()==Y){
           ^BDR:22: error: not found: value Y
  else if (char getIndication()==Y){
                                 ^BDR:24: error: not found: value char
  else if (char getIndication()==X){
           ^BDR:24: error: not found: value X
  else if (char getIndication()==X){
                                 ^